--- a/dash.html
+++ b/dash.html
@@ -42,15 +42,17 @@
       <!-- Statistiques -->
       <section class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6 mb-8 " id="dashbaord-cards">
         <!-- grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 -->
-        <div class="bg-white p-6 rounded-lg shadow ">
-          <p class="text-gray-600">Stock total</p>
-          <h2 class="text-2xl font-bold text-blue-600"></h2>
-        </div>
+        <a href="./produit.html">
+          <div class="bg-white p-6 rounded-lg shadow ">
+            <p class="text-gray-600">Stock total</p>
+            <h2 class="text-2xl font-bold text-blue-600"></h2>
+          </div>
+        </a>
         <div class="bg-white p-6 rounded-lg shadow">
           <p class="text-gray-600">Produits critiques</p>
           <h2 class="text-2xl font-bold text-red-600"></h2>
         </div>
-        <div class="bg-white p-6 rounded-lg shadow">
+        <div class="bg-white p-6 rounded-lg shadow" style="display: none;">
           <p class="text-gray-600">Stock bar</p>
           <h2 class="text-2xl font-bold text-green-600"></h2>
         </div>
