--- a/produit.html
+++ b/produit.html
@@ -78,6 +78,9 @@
           <th class="p-4">Unité</th>
           <th class="p-4">Catégorie</th>
           <th class="p-4">Stock disponible</th>
+          <th class="p-4">Prix d'achat</th>
+          <th class="p-4">Prix de vente Unitaire</th>
+          <th class="p-4">Prix de vente Totale</th>
           <th class="p-4">Date d'ajout</th>
           <th class="p-4">Action</th>
         </tr>
