--- a/ajoutProd.html
+++ b/ajoutProd.html
@@ -78,9 +78,12 @@
       <div>
         <label class="block text-sm font-medium">Service</label>
         <select name="service" class="w-full border border-gray-300 px-3 py-2 rounded mt-1">
-          <option value="">-- Sélectionner --</option>
+          <option value="">-- Choisir un service --</option>
+          <option value="service-generale">Service Général</option>
           <option value="cuisine">Cuisine</option>
           <option value="bar">Bar</option>
+          <option value="barista">Barista</option>
+          <option value="patisserie">Pâtisserie</option>
         </select>
       </div>
       <div>
