--- a/mvmtStok.html
+++ b/mvmtStok.html
@@ -73,12 +73,16 @@
           <option value="">Tous les types</option>
           <option value="entree">Entrée</option>
           <option value="sortie">Sortie</option>
+          <option value="dans">Dans</option>
         </select>
 
         <select class="p-2 border border-gray-300 rounded" name="service" id="filterMouvSelectService">
           <option value="">Tous les services</option>
+          <option value="service-generale">Service Général</option>
           <option value="cuisine">Cuisine</option>
           <option value="bar">Bar</option>
+          <option value="barista">Barista</option>
+          <option value="patisserie">Pâtisserie</option>
         </select>
       </form>
     </div>
