--- a/nouvMvmt.html
+++ b/nouvMvmt.html
@@ -71,6 +71,7 @@
           <option value="">-- Sélectionner --</option>
           <option value="entrée">Entrée</option>
           <option value="sortie">Sortie</option>
+          <option value="dans">Dans</option>
         </select>
       </div>
 
@@ -89,8 +90,11 @@
         <select name="service"
           class="w-full mt-1 px-4 py-2 border border-gray-300 rounded focus:ring-blue-500 focus:border-blue-500">
           <option value="">-- Choisir un service --</option>
+          <option value="service-generale">Service Général</option>
           <option value="cuisine">Cuisine</option>
           <option value="bar">Bar</option>
+          <option value="barista">Barista</option>
+          <option value="patisserie">Pâtisserie</option>
           <!-- À remplacer dynamiquement -->
         </select>
       </div>
