--- a/ajoutUtil.html
+++ b/ajoutUtil.html
@@ -87,7 +87,7 @@
       <div class="flex justify-between mt-6">
         <a href="utilisateurs.html" class="text-gray-600 hover:underline">Annuler</a>
         <button type="submit" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">
-          Enregistrer le produit
+          Enregistrer
         </button>
       </div>
     </form>
