--- a/ajoutProd.html
+++ b/ajoutProd.html
@@ -58,10 +58,10 @@
     </div>
   </nav>
 
-  <main class="p-6 max-w-xl mx-auto">
+  <main class="p-6 max-w-xl mx-auto" id="ajoutProd" style="display: none;">
     <h1 class="text-xl sm:text-2xl lg:text-3xl font-bold mb-4">Ajouter un nouveau produit</h1>
 
-    <form action="#" method="POST" class="bg-white p-6 rounded shadow space-y-4" id="ajoutProd">
+    <form action="#" method="POST" class="bg-white p-6 rounded shadow space-y-4">
       <p id="visualizer" class="text-center"></p>
       <div>
         <label class="block text-sm font-medium">Nom du produit</label>
@@ -122,8 +122,8 @@
     });
   </script>
   <script src="./ajax/dashcookies.js"></script>
+  <script src="./ajax/admin-checker.js"></script>
   <script src="./ajax/ajoutProd.js" async></script>
-
 
 </body>
 
