--- a/ajoutUtil.html
+++ b/ajoutUtil.html
@@ -79,8 +79,8 @@
         <label class="block text-sm font-medium">Rôle</label>
         <select name="role" class="w-full border border-gray-300 px-3 py-2 rounded mt-1">
           <option value="">-- Sélectionner --</option>
-          <option value="logisticienne">Logisticienne</option>
-          <option value="chef">Chef</option>
+          <option value="Admin">Admin</option>
+          <option value="Agent">Agent</option>
         </select>
       </div>
 
