--- a/produit.html
+++ b/produit.html
@@ -61,7 +61,7 @@
     <div class="flex justify-between items-center mb-6">
       <h1 class="text-2xl font-bold">Produits</h1>
       <button class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700"
-        onclick="window.location.href='ajoutProd.html'">+ Ajouter un produit</button>
+        onclick="window.location.href='ajoutProd.html'" id="add-prod">+ Ajouter un produit</button>
     </div>
 
     <div class="mb-4">
