--- a/nouvMvmt.html
+++ b/nouvMvmt.html
@@ -59,7 +59,7 @@
   </nav>
 
   <!-- Contenu principal -->
-  <main class="p-6 max-w-3xl mx-auto">
+  <main class="p-6 max-w-3xl mx-auto" id="ajoutProd" style="display: none;">
     <h1 class="text-2xl font-bold mb-6">Nouveau Mouvement de Stock</h1>
 
     <form action="#" method="POST" id="ajout_mouvement" class="bg-white shadow rounded-lg p-6 space-y-4">
@@ -99,11 +99,11 @@
         </select>
       </div>
 
-      <div>
+      <!--    <div>
         <label class="block text-sm font-medium text-gray-700">Résponsable</label>
         <input type="text" name="responsable" min="1" placeholder="Le nom et titre du résponsable"
           class="w-full mt-1 px-4 py-2 border border-gray-300 rounded focus:ring-blue-500 focus:border-blue-500">
-      </div>
+      </div> -->
 
       <div>
         <label class="block text-sm font-medium text-gray-700">Date du mouvement</label>
@@ -138,6 +138,7 @@
     });
   </script>
   <script src="./ajax/dashcookies.js"></script>
+  <script src="./ajax/admin-checker.js"></script>
   <script src="./ajax/ajout_mouvement.js"></script>
 
 </body>
