--- a/produit-critique.html
+++ b/produit-critique.html
@@ -59,9 +59,9 @@
 
     <main class="p-6 max-w-6xl mx-auto">
         <div class="flex justify-between items-center mb-6">
-            <h1 class="text-2xl font-bold">Produits</h1>
-            <button class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700"
-                onclick="window.location.href='ajoutProd.html'">+ Ajouter un produit</button>
+            <h1 class="text-2xl font-bold">Produits Critiques</h1>
+            <!--  <button class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700"
+                onclick="window.location.href='ajoutProd.html'">+ Ajouter un produit</button> -->
         </div>
 
         <div class="mb-4">
