--- a/rapport.html
+++ b/rapport.html
@@ -75,7 +75,7 @@
     </form>
 
     <!-- Résumés -->
-    <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-8" id="visualiseur-rapport-totale">
+    <div class="grid grid-cols-1 md:grid-cols-4 gap-5 mb-8" id="visualiseur-rapport-totale">
       <!-- <div class="bg-white p-4 rounded shadow">
         <h2 class="text-sm font-medium text-gray-500">Entrées totales</h2>
         <p class="text-xl font-bold text-green-600 mt-2">+ 580 unités</p>
@@ -98,7 +98,8 @@
             <th class="p-4 text-left">Produit</th>
             <th class="p-4 text-left">Entrées</th>
             <th class="p-4 text-left">Sorties</th>
-            <th class="p-4 text-left">Stock actuel</th>
+            <th class="p-4 text-left">Stock Actuel</th>
+            <th class="p-4 text-left">Total Entrée</th>
           </tr>
         </thead>
         <tbody id="rappot_table">
